infrastracture/kubernetes/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-ms-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-ms
  template:
    metadata:
      labels:
        app: gateway-ms
    spec:
      containers:
        - name: gateway-ms
          image: heyimjustalex/gateway-ms
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-ms-svc
spec:
  selector:
    app: gateway-ms
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
