infrastracture/kubernetes/orders-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-db
  template:
    metadata:
      labels:
        app: orders-db
    spec:
      containers:
        - name: orders-db
          image: heyimjustalex/orders-db
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db-svc
spec:
  selector:
    app: orders-db
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
