infrastracture/kubernetes/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-ms-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-ms
  template:
    metadata:
      labels:
        app: orders-ms
    spec:
      containers:
        - name: orders-ms
          image: heyimjustalex/orders-ms
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: orders-ms-svc
spec:
  selector:
    app: orders-ms
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
