infrastracture/kubernetes/products-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: products-db
spec:
  serviceName: products-db
  replicas: 1
  selector:
    matchLabels:
      app: products-db
  template:
    metadata:
      labels:
        app: products-db
    spec:
      containers:
        - name: products-db
          image: heyimjustalex/products-db
          readinessProbe:
            exec:
              command:
                - mongosh
                - localhost:27017/shop
                - --eval
                - "db.runCommand('ping')"
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - mongosh
                - localhost:27017/shop
                - --eval
                - "db.runCommand('ping')"
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: products-db
spec:
  selector:
    app: products-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
