infrastracture/kubernetes/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-ms-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-ms
  template:
    metadata:
      labels:
        app: products-ms
    spec:
      restartPolicy: Always
      containers:
        - name: products-ms
          image: heyimjustalex/products-ms
          livenessProbe:
            httpGet:
              path: /api/products_health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: products-ms-svc
spec:
  selector:
    app: products-ms
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
