infrastracture/kubernetes/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
        - name: nginx-proxy
          image: heyimjustalex/nginx-proxy
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-svc
spec:
  selector:
    app: nginx-proxy
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
