infrastracture/kubernetes/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - cloudcomputingtechnologies.pl
      secretName: nginx-tls-secret
  rules:
    - host: cloudcomputingtechnologies.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gateway-ms-svc
                port:
                  number: 8000
# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: nginx-config
#   namespace: default
# data:
#   default.conf: |
#     server {
#         listen 80;
#         server_name cloudcomputingtechnologies.pl;

#         location / {
#             root /usr/share/nginx/html;
#             index index.html;
#         }
#     }

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx
#   namespace: default
# spec:
#   selector:
#     app: nginx
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: 80
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: nginx
#   namespace: default
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: nginx
#   template:
#     metadata:
#       labels:
#         app: nginx
#     spec:
#       containers:
#         - name: nginx
#           image: nginx
#           volumeMounts:
#             - name: nginx-config
#               mountPath: /etc/nginx/conf.d/default.conf
#               subPath: default.conf
#       volumes:
#         - name: nginx-config
#           configMap:
#             name: nginx-config
